Native 처리 부분 추가.